MODSOURCE-936 - Upgrade module to Vert.x 5.0 (#725)
* Upgraded to Vertx 5 and RMB v36.0.0-snapshot

* Deleted `scala-library` dependency