@@ -34,6 +34,7 @@ import org.folio.rest.jaxrs.model.TenantAttributes;
 import org.folio.rest.jaxrs.model.TenantJob;
 import org.folio.rest.persist.PostgresClient;
 import org.folio.rest.tools.utils.Envs;
+import org.folio.rest.tools.utils.ModuleName;
 import org.folio.rest.tools.utils.NetworkUtils;
 import org.folio.services.util.AdditionalFieldsUtil;
 import org.junit.AfterClass;
@@ -43,6 +44,7 @@ import org.testcontainers.kafka.KafkaContainer;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.folio.services.util.AdditionalFieldsUtil.TAG_005;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -130,10 +132,12 @@ public abstract class AbstractLBServiceTest {
     DeploymentOptions restVerticleDeploymentOptions = new DeploymentOptions()
       .setConfig(new JsonObject().put("http.port", PORT));
 
-    vertx.deployVerticle(RestVerticle.class.getName(), restVerticleDeploymentOptions, deployResponse -> {
+    vertx.deployVerticle(RestVerticle.class.getName(), restVerticleDeploymentOptions).onComplete( deployResponse -> {
       try {
-        tenantClient.postTenant(new TenantAttributes().withModuleTo("3.2.0"), res2 -> {
+        String fullModuleName = getFullModuleName();
+        tenantClient.postTenant(new TenantAttributes().withModuleTo(fullModuleName), res2 -> {
           postgresClientFactory = new PostgresClientFactory(vertx);
+          context.assertTrue(res2.succeeded());
           if (res2.result().statusCode() == 204) {
             async.complete();
             return;
@@ -153,21 +157,23 @@ public abstract class AbstractLBServiceTest {
         });
       } catch (Exception e) {
         e.printStackTrace();
-        async.complete();
+        context.fail(e);
       }
     });
   }
 
   @AfterClass
   public static void tearDownClass(TestContext context) {
-    Async async = context.async();
     PostgresClientFactory.closeAll();
-    vertx.close(context.asyncAssertSuccess(res -> {
+    vertx.close().onComplete(context.asyncAssertSuccess(v -> {
       PostgresClient.stopPostgresTester();
       wireMockServer.stop();
       kafkaContainer.stop();
-      async.complete();
     }));
+  }
+
+  public static String getFullModuleName() {
+    return ModuleName.getModuleName() + "-" + ModuleName.getModuleVersion();
   }
 
   void compareMetadata(TestContext context, Metadata expected, Metadata actual) {
@@ -184,12 +190,14 @@ public abstract class AbstractLBServiceTest {
 
   protected void validate005Field(TestContext testContext, String expectedDate, Record record) {
     String actualDate = AdditionalFieldsUtil.getValueFromControlledField(record, TAG_005);
+    assertNotNull(actualDate);
     testContext.assertEquals(expectedDate.substring(0, 10),
       actualDate.substring(0, 10));
   }
 
   protected void validate005Field(String expectedDate, Record record) {
     String actualDate = AdditionalFieldsUtil.getValueFromControlledField(record, TAG_005);
+    assertNotNull(actualDate);
     assertEquals(expectedDate.substring(0, 10),
       actualDate.substring(0, 10));
   }
@@ -210,7 +218,7 @@ public abstract class AbstractLBServiceTest {
   }
 
   protected ConsumerRecord<String, String> getKafkaEvent(String topic) {
-    return getKafkaEvents(topic).get(0);
+    return getKafkaEvents(topic).getFirst();
   }
 
   protected List<ConsumerRecord<String, String>> getKafkaEvents(String topic) {
