@@ -36,7 +36,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.ws.rs.BadRequestException;
 import javax.ws.rs.NotFoundException;
 
@@ -52,7 +51,6 @@ import org.folio.dao.util.RecordType;
 import org.folio.dao.util.SnapshotDaoUtil;
 import org.folio.dbschema.ObjectMapperTool;
 import org.folio.kafka.exception.DuplicateEventException;
-import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.rest.jaxrs.model.AdditionalInfo;
 import org.folio.rest.jaxrs.model.Conditions;
 import org.folio.rest.jaxrs.model.ErrorRecord;
@@ -123,13 +121,8 @@ public class RecordServiceTest extends AbstractLBServiceTest {
 
   @After
   public void cleanUp(TestContext context) {
-    Async async = context.async();
-    SnapshotDaoUtil.deleteAll(postgresClientFactory.getQueryExecutor(TENANT_ID)).onComplete(delete -> {
-      if (delete.failed()) {
-        context.fail(delete.cause());
-      }
-      async.complete();
-    });
+    SnapshotDaoUtil.deleteAll(postgresClientFactory.getQueryExecutor(TENANT_ID))
+      .onComplete(context.asyncAssertSuccess());
   }
 
   @Test
@@ -140,17 +133,13 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       .withRecords(records)
       .withTotalRecords(records.size());
     saveRecords(recordCollection.getRecords()).onComplete(batch -> {
-      if (batch.failed()) {
-        context.fail(batch.cause());
-      }
+      context.assertTrue(batch.succeeded());
       String snapshotId = "ee561342-3098-47a8-ab6e-0f3eba120b04";
       Condition condition = RECORDS_LB.SNAPSHOT_ID.eq(UUID.fromString(snapshotId));
       List<OrderField<?>> orderFields = new ArrayList<>();
       orderFields.add(RECORDS_LB.ORDER.sort(SortOrder.ASC));
       recordService.getRecords(condition, RecordType.MARC_BIB, orderFields, 1, 2, TENANT_ID).onComplete(get -> {
-        if (get.failed()) {
-          context.fail(get.cause());
-        }
+        context.assertTrue(get.succeeded());
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
           .filter(r -> r.getSnapshotId().equals(snapshotId))
@@ -172,10 +161,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       .withRecords(records)
       .withTotalRecords(records.size());
     saveRecords(recordCollection.getRecords()).onComplete(batch -> {
-      if (batch.failed()) {
-        context.fail(batch.cause());
-      }
-
+      context.assertTrue(batch.succeeded());
       String externalId = "3c4ae3f3-b460-4a89-a2f9-78ce3145e4fc";
       List<FieldRange> data = List.of(new FieldRange().withFrom("001").withTo("999"));
 
@@ -188,13 +174,11 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .withData(data);
 
       recordService.fetchStrippedParsedRecords(batchRequest, TENANT_ID).onComplete(get -> {
-        if (get.failed()) {
-          context.fail(get.cause());
-        }
+        context.assertTrue(get.succeeded());
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
           .filter(r -> r.getExternalIdsHolder().getInstanceId().equals(externalId))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.getFirst(), get.result().getRecords().getFirst());
         async.complete();
@@ -210,9 +194,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       .withRecords(records)
       .withTotalRecords(records.size());
     saveRecords(recordCollection.getRecords()).onComplete(batch -> {
-      if (batch.failed()) {
-        context.fail(batch.cause());
-      }
+      context.assertTrue(batch.succeeded());
 
       String externalId = "3c4ae3f3-b460-4a89-a2f9-78ce3145e4fc";
       List<FieldRange> data = List.of(
@@ -232,14 +214,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .withData(data);
 
       recordService.fetchStrippedParsedRecords(batchRequest, TENANT_ID).onComplete(get -> {
-        if (get.failed()) {
-          context.fail(get.cause());
-        }
+        context.assertTrue(get.succeeded());
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
           .filter(r -> r.getExternalIdsHolder().getInstanceId().equals(externalId))
           .peek(r -> r.getParsedRecord().setContent(expectedContent))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.getFirst(), get.result().getRecords().getFirst());
         async.complete();
@@ -1740,7 +1720,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(Record.RecordType.MARC_BIB))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -1748,7 +1728,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
     List<Future<RecordsBatchResponse>> futures = List.of(recordService.saveRecords(recordCollection, okapiHeaders),
       recordService.saveRecords(recordCollection, okapiHeaders));
 
-    GenericCompositeFuture.all(futures).onComplete(ar -> {
+    Future.all(futures).onComplete(ar -> {
       context.assertTrue(ar.failed());
       assertThrows(DuplicateEventException.class, () -> {throw ar.cause();});
       async.complete();
@@ -2056,9 +2036,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         context.fail(save.cause());
       }
       recordService.getRecordById(expected.getMatchedId(), TENANT_ID).onComplete(get -> {
-        if (get.failed()) {
-          context.fail(get.cause());
-        }
+        context.assertTrue(get.succeeded());
         context.assertTrue(get.result().isPresent());
         context.assertNotNull(get.result().get().getRawRecord());
         context.assertNotNull(get.result().get().getParsedRecord());
@@ -2126,15 +2104,13 @@ public class RecordServiceTest extends AbstractLBServiceTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(marcBib))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
     var okapiHeaders = Map.of(OKAPI_TENANT_HEADER, TENANT_ID);
     recordService.saveRecords(recordCollection, okapiHeaders).onComplete(batch -> {
-      if (batch.failed()) {
-        context.fail(batch.cause());
-      }
+      context.assertTrue(batch.succeeded());
 
       ArgumentCaptor<Record> captureOldRecord = ArgumentCaptor.forClass(Record.class);
       verify(recordDomainEventPublisher, times(batch.result().getTotalRecords())).publishRecordCreated(captureOldRecord.capture(), any());
@@ -2144,9 +2120,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       compareRecords(context, expected, batch.result().getRecords());
       RecordDaoUtil.countByCondition(postgresClientFactory.getQueryExecutor(TENANT_ID), DSL.trueCondition())
         .onComplete(count -> {
-          if (count.failed()) {
-            context.fail(count.cause());
-          }
+          context.assertTrue(count.succeeded());
           context.assertEquals(expected.size(), count.result());
           async.complete();
         });
@@ -2159,15 +2133,13 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       .filter(record -> record.getRecordType().equals(recordType))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
       .map(record -> record.withErrorRecord(TestMocks.getErrorRecord(0)))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
     var okapiHeaders = Map.of(OKAPI_TENANT_HEADER, TENANT_ID);
     recordService.saveRecords(recordCollection, okapiHeaders).onComplete(batch -> {
-      if (batch.failed()) {
-        context.fail(batch.cause());
-      }
+      context.assertTrue(batch.succeeded());
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
       compareRecords(context, expected, batch.result().getRecords());
@@ -2175,9 +2147,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         TestMocks.getErrorRecord(0).getDescription());
       RecordDaoUtil.countByCondition(postgresClientFactory.getQueryExecutor(TENANT_ID), DSL.trueCondition())
         .onComplete(count -> {
-          if (count.failed()) {
-            context.fail(count.cause());
-          }
+          context.assertTrue(count.succeeded());
           context.assertEquals(expected.size(), count.result());
           async.complete();
         });
@@ -2267,7 +2237,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       List<String> ids = records.stream()
         .filter(r -> r.getRecordType().equals(recordType))
         .map(Record::getMatchedId)
-        .collect(Collectors.toList());
+        .toList();
 
       recordService.getSourceRecords(ids, IdType.RECORD, parsedRecordType, false, TENANT_ID).onComplete(get -> {
         if (get.failed()) {
@@ -2340,7 +2310,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         return deletedRecord;
       })
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(records)
       .withTotalRecords(records.size());
@@ -2351,7 +2321,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       List<String> ids = records.stream()
         .filter(r -> r.getRecordType().equals(recordType))
         .map(Record::getMatchedId)
-        .collect(Collectors.toList());
+        .toList();
       recordService.getSourceRecords(ids, IdType.RECORD, parsedRecordType, true, TENANT_ID).onComplete(get -> {
         if (get.failed()) {
           context.fail(get.cause());
@@ -2406,7 +2376,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
     Async async = context.async();
     List<Record> original = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(recordType))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(original)
       .withTotalRecords(original.size());
@@ -2418,13 +2388,13 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .map(aRecord -> clone(aRecord, Record.class))
         .map(aRecord -> aRecord
           .withExternalIdsHolder(aRecord.getExternalIdsHolder().withInstanceId(UUID.randomUUID().toString())))
-        .collect(Collectors.toList());
+        .toList();
       recordCollection
         .withRecords(updated)
         .withTotalRecords(updated.size());
       List<ParsedRecord> expected = updated.stream()
         .map(Record::getParsedRecord)
-        .collect(Collectors.toList());
+        .toList();
       var okapiHeaders = Map.of(OKAPI_TENANT_HEADER, TENANT_ID);
       recordService.updateParsedRecords(recordCollection, okapiHeaders).onComplete(update -> {
         if (update.failed()) {
@@ -2443,14 +2413,14 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         context.assertEquals(0, update.result().getErrorMessages().size());
         context.assertEquals(expected.size(), update.result().getTotalRecords());
         compareParsedRecords(context, expected, update.result().getParsedRecords());
-        GenericCompositeFuture.all(updated.stream().map(record -> recordDao
+        Future.all(updated.stream().map(record -> recordDao
           .getRecordByMatchedId(record.getMatchedId(), TENANT_ID)
           .onComplete(get -> {
             if (get.failed()) {
               context.fail(get.cause());
             }
             context.assertTrue(get.result().isPresent());
-          })).collect(Collectors.toList())).onComplete(res -> {
+          })).toList()).onComplete(res -> {
           if (res.failed()) {
             context.fail(res.cause());
           }
@@ -2581,9 +2551,9 @@ public class RecordServiceTest extends AbstractLBServiceTest {
 
   private CompositeFuture saveRecords(List<Record> records) {
     var okapiHeaders = Map.of(OKAPI_TENANT_HEADER, TENANT_ID);
-    return GenericCompositeFuture.all(records.stream()
+    return Future.all(records.stream()
       .map(record -> recordService.saveRecord(record, okapiHeaders))
-      .collect(Collectors.toList())
+      .toList()
     );
   }
 
